--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 backdrop-filter: blur(0.5rem);
             }
             #foto {
-                background:
-                 transparent url("img/fondo.png") 0 0 no-repeat;
+                background: url("img/fondo.png");
                 background-size: cover;
                 color: white;
             }
