--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 backdrop-filter: blur(0.5rem);
             }
             #foto {
-                background: url("img/fondo.png");
+                background: url("assets/img/fondo.png");
                 background-size: cover;
                 color: white;
             }
