--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 backdrop-filter: blur(0.5rem);
             }
             #foto {
-                background: transparent url("img/fondo.png") 0 0 no-repeat;
+                background: transparent url("assets/img/fondo.png") 0 0 no-repeat;
                 background-size: cover;
                 color: white;
             }
