--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                 <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
                 <nav id="navbar" class="navbar">
                     <ul id="barrita">
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="trabajo.html">Áreas de trabajo</a></li>
-                        <li><a href="projects.html">Proyectos de diseño</a></li>
-                        <li><a href="projects.html">Mundo creativo</a></li>
-                        <li><a href="blog.html">Experiencia</a></li>
+                        <li><a href="index.html" class="active">Hola</a></li>
+                        <li><a href="#services">Áreas de trabajo</a></li>
+                        <li><a href="projects.html">Proyectos</a></li>
+                        <li><a href="projects.html">Ilustraciones</a></li>
+                        <li><a href="#footer">Contacto</a></li>
                     </ul>
                 </nav>
                 <!-- .navbar -->
@@ -167,7 +167,7 @@
 
             <div class="footer-legal text-center position-relative">
                 <div class="container">
-                    <div class="copyright">
+                    <div id="footer" class="copyright">
                         &copy; Copyright <strong><span>Florencia Vildósola E.</span></strong>. Todos los derechos reservados
                     </div>
                     <div class="credits">
