--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                     <ul id="barrita">
                         <li><a href="index.html" class="active">Hola</a></li>
                         <li><a href="#services">Áreas de trabajo</a></li>
-                        <li><a href="projects.html">Proyectos</a></li>
-                        <li><a href="projects.html">Ilustraciones</a></li>
+                        <li><a href=#portafoliol">Proyectos</a></li>
                         <li><a href="#footer">Contacto</a></li>
                     </ul>
                 </nav>
